@@ -1,3 +1,8 @@
+2011-10-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-file-name-handler): Add 'debug to the error
+	condition.
+
 2011-09-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-sh-handle-file-name-all-completions): Fix
